deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ledger-api
  namespace: payments

spec:
  rules:
  - host: ledger.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ledger-api
            port:
              number: 8080
