deploy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: ledger-api-network-policy
  namespace: payments

spec:
  podSelector:
    matchLabels:
      app: ledger-api

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: reporting

    ports:
    - protocol: TCP
      port: 8080

  egress:
  - {}
